--- a/style.css
+++ b/style.css
@@ -15,3 +15,19 @@ header {
 ul {
     list-style-type: none;
 }
+
+table {
+    border-collapse: collapse;
+    border: none;
+    padding: 8px;
+}
+
+
+/*td {
+border: 2px solid black;
+
+}*/
+
+#tableheader {
+    background-color: lightgrey;
+}
