--- a/style.css
+++ b/style.css
@@ -18,15 +18,20 @@ ul {
 
 table {
     border-collapse: collapse;
-    border: none;
-    padding: 8px;
+    width: 100%;
+    /*border: 2px solid black;*/
 }
 
+th {
+    border: 2px solid black;
+    background-color: lightgrey;
+    text-align: left;
+    font-weight: normal;
+}
 
-/*td {
-border: 2px solid black;
-
-}*/
+td {
+    border: 2px solid black;
+}
 
 #tableheader {
     background-color: lightgrey;
