table format 50 percent done

--- a/style.css
+++ b/style.css
@@ -37,6 +37,24 @@ td {
     background-color: lightgrey;
 }
 
+#tableFooter {
+    background-color: lightgrey;
+}
+
 #showMonthly {
     text-align: right;
+}
+
+#tableAttempt2 tr:nth-child(even) {
+    background-color: rgba(224, 224, 235, 0.678);
+}
+
+#tableAttempt2 .showMoney {}
+
+
+/*.showMoney {
+    font-weight: bolder;
+    background-color: purple;*/
+
+
 }
